Switch to a specific class .icon-wrap instead of :first-child selector for icon-row Fixes https://github.com/openshift/origin-web-console/pull/1144#issuecomment-273819621

--- a/app/styles/_components.less
+++ b/app/styles/_components.less
@@ -169,7 +169,7 @@
     [flex] {
       min-width: 0;
     }
-    [row] {
+    .icon-row {
       border-left: 3px solid @gray-lighter;
       padding: 2px 0 0 2px;
     }
