--- a/app/styles/_openshift-icon.less
+++ b/app/styles/_openshift-icon.less
@@ -324,7 +324,7 @@ you can use the generic selector below, but it's slower:
 }
 
 .icon-row {
-  div:first-child {
+  .icon-wrap {
     text-align: center;
     width: 30px;
   }
